Fixed up background colors, green and gray. Text aligned stats title

--- a/styles.css
+++ b/styles.css
@@ -1,14 +1,22 @@
+body {
+    font-size: 20px;
+
+}
 h1 {
     text-align: center;
 }
 
 img {
-    border: 4px solid #555;
+    border: 4px solid black;
     height: 300px;
 }
 
 button {
+    border: none;
     border-radius: 10px;
+    font-size: 20px;
+    width: 100px;
+    height: 40px;
 }
 #container {
     display: flex;
@@ -20,8 +28,15 @@ button {
 
 #name {
     text-align: center;
-    background-color: #d2d4d3;
+    padding-top: 7px;
+    padding-bottom: 7px;
+    background-color: #E8E8E8;;
+    border: 1px solid black;
     border-radius: 10px;
+}
+
+#stats-title {
+    text-align: center;
 }
 #left-box {
     margin-left: 30px
